<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fantavier.bierbattle.bierbattle.TerminDetail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="4"
            android:paddingBottom="10dp"
            android:rowCount="2"
            android:textAlignment="center">

            <TextView
                android:id="@+id/votingPositiv"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_columnSpan="1"
                android:layout_marginBottom="10dp"
                android:layout_row="0"
                android:text="@string/zahl_plus"
                android:textAlignment="textEnd"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/votingTitle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_columnSpan="2"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_row="0"
                android:lines="2"
                android:text="@string/abstimmung"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/votingNegativ"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:layout_columnSpan="1"
                android:layout_marginBottom="10dp"
                android:text="@string/zahl_minus"
                android:textAlignment="textStart"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/positivButton"
                android:layout_width="180dp"
                android:layout_height="60dp"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_columnWeight="0.1"
                android:layout_gravity="left"
                android:layout_row="1"
                android:layout_weight="0.5"
                android:background="?android:attr/colorBackground"
                android:focusableInTouchMode="true"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/plus" />

            <ImageButton
                android:id="@+id/negativButton"
                android:layout_width="180dp"
                android:layout_height="60dp"
                android:layout_column="2"
                android:layout_columnSpan="2"
                android:layout_gravity="right"
                android:layout_row="1"
                android:background="?android:attr/colorBackground"
                android:focusableInTouchMode="true"
                android:scaleType="centerInside
"
                app:srcCompat="@drawable/minus" />
        </GridLayout>

        <LinearLayout
            android:id="@+id/votingLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        </LinearLayout>

        <LinearLayout
            android:id="@+id/dateLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="10dp">

            <TextView
                android:id="@+id/appointmentDateLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingHorizontal="5dp"
                android:paddingVertical="10dp"
                android:text="@string/datum"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/appointmentDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingHorizontal="5dp"
                android:paddingVertical="10dp"
                android:text="@string/text"
                android:textAlignment="textEnd"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/timeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="10dp">

            <TextView
                android:id="@+id/appointmentTimeLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingHorizontal="5dp"
                android:paddingVertical="10dp"
                android:text="@string/uhrzeit"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/appointmentTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingHorizontal="5dp"
                android:paddingVertical="10dp"
                android:text="@string/text"
                android:textAlignment="textEnd"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/locationLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="10dp">

            <TextView
                android:id="@+id/appointmentLocationLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingHorizontal="5dp"
                android:paddingVertical="10dp"
                android:text="@string/ort"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/appointmentLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingHorizontal="5dp"
                android:paddingVertical="10dp"
                android:text="@string/text"
                android:textAlignment="textEnd"
                android:textSize="30sp" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/appointmentWeekly"
            style="@style/Widget.AppCompat.CompoundButton.CheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:buttonTint="@color/colorPrimary"
            android:clickable="false"
            android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
            android:paddingHorizontal="5dp"
            android:paddingVertical="10dp"
            android:text="@string/woechentlich"
            android:textAlignment="viewStart"
            android:textColorLink="@color/colorPrimary"
            android:textSize="30sp" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
